A bunch of stuffs aafter the second lecture on graphics programming

--- a/COMP220/COMP220_Examples/SDLOpenGL/SDLOpenGL.vcxproj
+++ b/COMP220/COMP220_Examples/SDLOpenGL/SDLOpenGL.vcxproj
@@ -135,6 +135,10 @@ copy ..\..\..\Libraries\glew-2.1.0\bin\Release\x64\glew32.dll $(OutDir)\glew32.d
   <ItemGroup>
     <ClInclude Include="main.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="fragmentshader.txt" />
+    <Text Include="vertexshader.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
