--- a/COMP220/COMP220_Examples/SDLOpenGL/SDLOpenGL.vcxproj.filters
+++ b/COMP220/COMP220_Examples/SDLOpenGL/SDLOpenGL.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Mesh.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="subMesh.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MVP.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="subMesh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
