--- a/COMP220/COMP220_Examples/SDLOpenGL/SDLOpenGL.vcxproj
+++ b/COMP220/COMP220_Examples/SDLOpenGL/SDLOpenGL.vcxproj
@@ -214,6 +214,7 @@ copy ..\..\..\Libraries\assimp\bin\assimp-vc140-mt.dll $(OutDir)\assimp-vc140-mt
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="PostProcessor.cpp" />
     <ClCompile Include="subMesh.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="WorldObject.cpp" />
@@ -226,6 +227,7 @@ copy ..\..\..\Libraries\assimp\bin\assimp-vc140-mt.dll $(OutDir)\assimp-vc140-mt
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="MVP.h" />
     <ClInclude Include="ObjLoader.h" />
+    <ClInclude Include="PostProcessor.h" />
     <ClInclude Include="ShaderLoader.h" />
     <ClInclude Include="subMesh.h" />
     <ClInclude Include="Texture.h" />
@@ -238,8 +240,10 @@ copy ..\..\..\Libraries\assimp\bin\assimp-vc140-mt.dll $(OutDir)\assimp-vc140-mt
     <Text Include="Shaders\LightFrag.txt" />
     <Text Include="Shaders\LightVert.txt" />
     <Text Include="Shaders\only_quad_sphere.txt" />
-    <Text Include="Shaders\PostProcFragment.txt" />
-    <Text Include="Shaders\PostProcVertex.txt" />
+    <Text Include="Shaders\PostProcBlurFrag.txt" />
+    <Text Include="Shaders\PostProc3DoFrag.txt" />
+    <Text Include="Shaders\PostProcGreyScaleFrag.txt" />
+    <Text Include="Shaders\PostProcVert.txt" />
     <Text Include="Shaders\TexFrag.txt" />
     <Text Include="Shaders\TexLightFrag.txt" />
     <Text Include="Shaders\TexLightVert.txt" />
