--- a/COMP220/COMP220_Examples/SDLOpenGL/SDLOpenGL.vcxproj.filters
+++ b/COMP220/COMP220_Examples/SDLOpenGL/SDLOpenGL.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="WorldObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PostProcessor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -83,6 +86,9 @@
     <ClInclude Include="WorldObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PostProcessor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Shaders\fragmentShader.txt">
@@ -95,12 +101,6 @@
       <Filter>Source Files\shaders</Filter>
     </Text>
     <Text Include="Shaders\only_quad_sphere.txt">
-      <Filter>Source Files\shaders</Filter>
-    </Text>
-    <Text Include="Shaders\PostProcFragment.txt">
-      <Filter>Source Files\shaders</Filter>
-    </Text>
-    <Text Include="Shaders\PostProcVertex.txt">
       <Filter>Source Files\shaders</Filter>
     </Text>
     <Text Include="Shaders\TexFrag.txt">
@@ -116,6 +116,18 @@
       <Filter>Source Files\shaders</Filter>
     </Text>
     <Text Include="Shaders\vertexShader.txt">
+      <Filter>Source Files\shaders</Filter>
+    </Text>
+    <Text Include="Shaders\PostProcGreyScaleFrag.txt">
+      <Filter>Source Files\shaders</Filter>
+    </Text>
+    <Text Include="Shaders\PostProcVert.txt">
+      <Filter>Source Files\shaders</Filter>
+    </Text>
+    <Text Include="Shaders\PostProc3DoFrag.txt">
+      <Filter>Source Files\shaders</Filter>
+    </Text>
+    <Text Include="Shaders\PostProcBlurFrag.txt">
       <Filter>Source Files\shaders</Filter>
     </Text>
   </ItemGroup>
