outline postprocessor finished

--- a/COMP220/COMP220_Examples/SDLOpenGL/SDLOpenGL.vcxproj
+++ b/COMP220/COMP220_Examples/SDLOpenGL/SDLOpenGL.vcxproj
@@ -241,7 +241,7 @@ copy ..\..\..\Libraries\assimp\bin\assimp-vc140-mt.dll $(OutDir)\assimp-vc140-mt
     <Text Include="Shaders\LightVert.txt" />
     <Text Include="Shaders\only_quad_sphere.txt" />
     <Text Include="Shaders\PostProcBlurFrag.txt" />
-    <Text Include="Shaders\PostProc3DoFrag.txt" />
+    <Text Include="Shaders\PostProcOutlineFrag.txt" />
     <Text Include="Shaders\PostProcGreyScaleFrag.txt" />
     <Text Include="Shaders\PostProcVert.txt" />
     <Text Include="Shaders\TexFrag.txt" />
