--- a/COMP220/COMP220_Examples/SDLOpenGL/SDLOpenGL.vcxproj.filters
+++ b/COMP220/COMP220_Examples/SDLOpenGL/SDLOpenGL.vcxproj.filters
@@ -45,6 +45,12 @@
     <ClCompile Include="PostProcessor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="rayCast.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Vertex.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -87,6 +93,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PostProcessor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rayCast.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
