--- a/.gitignore
+++ b/.gitignore
@@ -261,3 +261,24 @@ paket-files/
 # Compiled Python files
 *.pyc
 *.pyo
+/bin
+/build3/gmake
+/build_cmake/
+
+*.pyc
+
+# Python
+__pycache__/
+*.py[cod]
+
+# Pip
+pip-selfcheck.json
+*.whl
+*.egg
+*.egg-info
+
+# Setuptools
+/build
+/dist
+*.eggs
+
