added texture manager class that handles textures using map started work on refining bloom effect

--- a/COMP220/COMP220_Examples/BulletPhysIntergration/BulletPhysIntergration.vcxproj.filters
+++ b/COMP220/COMP220_Examples/BulletPhysIntergration/BulletPhysIntergration.vcxproj.filters
@@ -178,5 +178,8 @@
     <Text Include="Shaders\PostProcBloomFragPass2.txt">
       <Filter>Source Files\shaders</Filter>
     </Text>
+    <Text Include="Shaders\PostProcBloomFragPass3.txt">
+      <Filter>Source Files\shaders</Filter>
+    </Text>
   </ItemGroup>
 </Project>
