--- a/COMP220/COMP220_Examples/BulletPhysIntergration/BulletPhysIntergration.vcxproj
+++ b/COMP220/COMP220_Examples/BulletPhysIntergration/BulletPhysIntergration.vcxproj
@@ -267,6 +267,7 @@ copy ..\..\..\Libraries\assimp\bin\assimp-vc140-mt.dll $(OutDir)\assimp-vc140-mt
     <Text Include="Shaders\only_quad_sphere.txt" />
     <Text Include="Shaders\PostProcBloomFragPass1.txt" />
     <Text Include="Shaders\PostProcBloomFragPass2.txt" />
+    <Text Include="Shaders\PostProcBloomFragPass3.txt" />
     <Text Include="Shaders\PostProcBlurFrag.txt" />
     <Text Include="Shaders\PostProcOutlineFrag.txt" />
     <Text Include="Shaders\PostProcGreyScaleFrag.txt" />
