--- a/COMP220/COMP220_Examples/BulletPhysIntergration/BulletPhysIntergration.vcxproj
+++ b/COMP220/COMP220_Examples/BulletPhysIntergration/BulletPhysIntergration.vcxproj
@@ -227,6 +227,7 @@ copy ..\..\..\Libraries\assimp\bin\assimp-vc140-mt.dll $(OutDir)\assimp-vc140-mt
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="PhysicsSimulation.cpp" />
+    <ClCompile Include="PostProcessBloom.cpp" />
     <ClCompile Include="PostProcessor.cpp" />
     <ClCompile Include="rayCast.cpp" />
     <ClCompile Include="Renderer.cpp" />
@@ -246,6 +247,7 @@ copy ..\..\..\Libraries\assimp\bin\assimp-vc140-mt.dll $(OutDir)\assimp-vc140-mt
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="MVP.h" />
     <ClInclude Include="PhysicsSimulation.h" />
+    <ClInclude Include="PostProcessBloom.h" />
     <ClInclude Include="PostProcessor.h" />
     <ClInclude Include="rayCast.h" />
     <ClInclude Include="Renderer.h" />
@@ -266,8 +268,8 @@ copy ..\..\..\Libraries\assimp\bin\assimp-vc140-mt.dll $(OutDir)\assimp-vc140-mt
     <Text Include="Shaders\LightVert.txt" />
     <Text Include="Shaders\only_quad_sphere.txt" />
     <Text Include="Shaders\PostProcBloomFragPass1.txt" />
-    <Text Include="Shaders\PostProcBloomFragPass2.txt" />
     <Text Include="Shaders\PostProcBloomFragPass3.txt" />
+    <Text Include="Shaders\PostProcBloomFragPass2.txt" />
     <Text Include="Shaders\PostProcBlurFrag.txt" />
     <Text Include="Shaders\PostProcOutlineFrag.txt" />
     <Text Include="Shaders\PostProcGreyScaleFrag.txt" />
