finished the skybox class added a skybox Texture changed texture to now load skyboxes also added shaders for SkyBox removed old Cube added new cube

--- a/COMP220/COMP220_Examples/BulletPhysIntergration/BulletPhysIntergration.vcxproj
+++ b/COMP220/COMP220_Examples/BulletPhysIntergration/BulletPhysIntergration.vcxproj
@@ -274,6 +274,8 @@ copy ..\..\..\Libraries\assimp\bin\assimp-vc140-mt.dll $(OutDir)\assimp-vc140-mt
     <Text Include="Shaders\PostProcOutlineFrag.txt" />
     <Text Include="Shaders\PostProcGreyScaleFrag.txt" />
     <Text Include="Shaders\PostProcVert.txt" />
+    <Text Include="Shaders\SkyBoxFrag.txt" />
+    <Text Include="Shaders\SkyBoxVert.txt" />
     <Text Include="Shaders\TexFrag.txt" />
     <Text Include="Shaders\TexLightFrag.txt" />
     <Text Include="Shaders\TexLightVert.txt" />
