--- a/COMP220/COMP220_Examples/BulletPhysIntergration/BulletPhysIntergration.vcxproj.filters
+++ b/COMP220/COMP220_Examples/BulletPhysIntergration/BulletPhysIntergration.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="PostProcessBloom.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ShaderManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -129,6 +132,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PostProcessBloom.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ShaderManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
